# italian-alphabet-anki

./: .gitignore  README.md  pyproject.toml
input/: input_data.dsv
italian_alphabet_anki/: main.py
